...
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!-- common strings without special context -->
    <string name="app_name">Polli</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_search">Clear Search</string>
...
    <!-- the placeholder will be replaced by the name of a file -->
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="email_address">Email Address</string>
    <string name="existing_password">Existing Password</string>
    <string name="now">Now</string>
    <!-- Headline for destructive actions with no undo. Could also be "Caution" or "Warning". -->
...
    <string name="menu_new_classic_contact">Add Contact Manually</string>
    <string name="new_classic_contact_explain">Manually added contacts can be used to text to classic email and are not guaranteed end-to-end encrypted.</string>
    <string name="menu_new_group">New Group</string>
    <!-- "Chat" is a verb here, "Message to" would also fit. the string might be used in the "New Chat" screen above the contact list -->
    <string name="clone_chat">Clone Chat</string>
...
    <string name="chat_record_explain">Tap and hold to record a voice message, release to send</string>
    <string name="chat_share_with_title">Share with…</string>
    <string name="chat_input_placeholder">Message</string>
    <string name="chat_archived_label">Archived</string>
    <string name="chat_no_messages">No messages.</string>
...

    <!-- create/edit groups, contact/group profile -->
    <string name="group_create_button">Create Group</string>
    <!-- deprecated, use please_enter_chat_name -->
    <string name="please_enter_chat_name">Please enter a name.</string>
...
    <!-- Secondary button on the welcome screen, allows to "Add as Second Device", "Restore from Backup" -->
    <!-- This is a button and a title, allowing to use existing, classic email, setting ports, passwords and so on -->
    <string name="manual_account_setup_option">Use Classic Email as Relay</string>
    <!-- Instant onboarding title (there is not more to do than to set name and avatar) -->
    <!-- The placeholder will be replaced by the default onboarding server -->
...
    <string name="instant_onboarding_confirm_group">Create a new profile and join \"%1$s\"?</string>

    <string name="scan_invitation_code">Scan Invitation Code</string>
    <string name="login_advanced_hint">This login is for advanced users.\n\nDo not use an address you\'re using in another app.</string>
    <string name="login_imap_login">IMAP Login Name</string>
...
    <string name="login_error_mail">Please enter a valid email address</string>
    <string name="login_error_required_fields">Please enter a valid email address and a password</string>
    <string name="import_backup_title">Restore from Backup</string>
    <!-- %1$s will be replaced by the failing address -->
    <string name="login_error_cannot_login">Cannot login as \"%1$s\". Please check if the address and the password are correct.</string>
...
    <!-- Opposite of "Save". Undo a "Save" action. Similar to "Unmute", "Unpin". Could also be worded as "Save no longer" or so. -->
    <string name="unsave">Unsave</string>
    <string name="name_desktop">Name</string>
    <string name="export_backup_desktop">Export Backup</string>
    <string name="menu.view.developer.open.log.folder">Open the Log Folder</string>
...
